# whats-going-on

./: .gitignore  CHANGELOG.md  Makefile  README.md  create_migration.py  db_models.py  mise.toml  models.py  notes.md  project-context.md  pyproject.toml  refresh.py  scrape.py  scrape_drawingcenter.py  server.py
.claude/agents/: design-review-engineer.md
data/: .init-migration.sql.swp  db_models.py  init-migration.sql  init_db.py  repositories.py  seed_data.sql  wgo.prod.db
docs/: architecture.md  development-principles.md  initial-architecture.md  milestones.md  project-context.md  references.md
docs/data-management/: data-management-patterns.md
docs/web-interface/: web-interface.md
parser/: drawing_center.py  parser.py
references/sites/: drawing_center_exhibitions.html
web/: package-lock.json
web/app/: globals.css  layout.tsx
web/app/events/: page.tsx
web/components/: EventCard.tsx
web/lib/: types.ts
wgo-server/: refresh.py  schemas.py  server.py
wgo-server/data/: database.py  init_db.py  repositories.py
wgo-server/parser/: drawing_center.py
wgo-server/references/sites/: drawingcenter_2.html  pioneer_works_calendar.html
wgo-web-client/: package.json
wgo-web-client/app/: globals.css  page.tsx
wgo-web-client/lib/: api.ts  event-types.ts
