[project]
name = "whats-going-on"
version = "0.1.0"
description = "A simple service to track upcoming events"
authors = [
    {name = "Tyler Chadwick",email = "info@tylerchadwick.com"}
]
license = "UNLICENSED"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (==2.0.49)",
    "fastapi (>=0.136.1,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
