[project]
name = "whats-going-on"
version = "0.1.0"
description = "A simple service to track upcoming events"
authors = [
    {name = "Tyler Chadwick",email = "info@tylerchadwick.com"}
]
license = "UNLICENSED"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.49, <2.1.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=6.1.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
